backend/jaeger-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: jaeger-ingress
  namespace: observability-backend
spec:
  ingressClassName: nginx
  rules:
  - host: "jaeger.edr.cloudns.be"
    http:
      paths:
      - backend:
          service:
            name: jaeger-query
            port:
              number: 16686
        path: /
        pathType: Prefix
